--- a/web/views/_workers.slim
+++ b/web/views/_workers.slim
@@ -1,5 +1,5 @@
-table class="table table-striped table-bordered workers"
-  tr
+table class="workers table table-hover table-bordered table-striped"
+  thead
     th Worker
     th Queue
     th Class
@@ -8,7 +8,8 @@ table class="table table-striped table-bordered workers"
   - workers.each do |(worker, msg)|
     tr
       td= worker
-      td= msg['queue']
+      td
+        a href="queues/#{msg['queue']}" = msg['queue']
       td= msg['payload']['class']
       td= msg['payload']['args'].inspect[0..100]
       td== relative_time(msg['run_at'].is_a?(Numeric) ? Time.at(msg['run_at']) : Time.parse(msg['run_at']))
